# pointworld_baseline

./: .gitignore  README.md  pyproject.toml
examples/: README.md  minimal_predict.py
pointworld_baseline/: __init__.py  features.py  predictor.py  schema.py
