[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pointworld-baseline"
version = "0.1.0"
description = "Dataset-agnostic API wrapper and Step3 example baseline for NVIDIA PointWorld."
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "torch",
  "pillow",
]

[tool.setuptools.packages.find]
include = ["pointworld_baseline*"]
